Extension page & content added
-Extensions.html created
-Extensions content added
-Nav fixed, link in top left corner

--- a/IDE Project/startbootstrap-clean-blog-gh-pages/shortcuts.html
+++ b/IDE Project/startbootstrap-clean-blog-gh-pages/shortcuts.html
@@ -60,6 +60,9 @@
                     <li>
                         <a href="comparison.html">Comparison</a>
                     </li>
+					<li>
+						<a href="extensions.html">Extensions</a>
+					</li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
