--- a/IDE Project/startbootstrap-clean-blog-gh-pages/about.html
+++ b/IDE Project/startbootstrap-clean-blog-gh-pages/about.html
@@ -48,7 +48,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+					<li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
@@ -60,6 +60,9 @@
                     <li>
                         <a href="comparison.html">Comparison</a>
                     </li>
+					<li>
+						<a href="extensions.html">Extensions</a>
+					</li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
