--- a/IDE Project/startbootstrap-clean-blog-gh-pages/comparison.html
+++ b/IDE Project/startbootstrap-clean-blog-gh-pages/comparison.html
@@ -119,25 +119,11 @@
 					<div class="customCol" style="width:45%;float:right;">
 					<h3>Weaknesses</h3>
 						<ul>
-							<li>Project collaboration</li>
-							<li>Task management</li>
-							<li>Create permissions></li>
-							<li>Manage users</li>
-							<li>Customize dashboard</li>
-							<li>Create reports</li>
-							<li>Export to Excel</li>
-							<li>Java, Ruby, Python etc.</li>
-							<li>Obtain software insights</li>
-							<li>Identifies bugs</li>
-							<li>Hosting included</li>
-							<li>Freemium version</li>
-							<li>Online support</li>
-							<li>Video tutorials</li>
-							<li>View backlogs</li>
-							<li>Eclipse plugin</li>
-							<li>Git client support</li>
-							<li>Scalable packages</li>
-							<li>Upgrade/downgrade pricing</li>
+							<li>Occasionally crashes when updating project and solution files</li>
+							<li>Ipch directory is a pain</li>
+							<li>"Find and replace" dialog</li>
+							<li>Rising cost</li>
+							<li>Expiring intellectual property</li>
 						</ul>
 					</div>
 
@@ -147,49 +133,28 @@
 					<div class="customCol" style="width:50%;float:left;">
 						<h3>Strengths</h3>
 						<ul>
-							<li>Project collaboration</li>
-							<li>Task management</li>
-							<li>Create permissions></li>
-							<li>Manage users</li>
-							<li>Customize dashboard</li>
-							<li>Create reports</li>
-							<li>Export to Excel</li>
-							<li>Java, Ruby, Python etc.</li>
-							<li>Obtain software insights</li>
-							<li>Identifies bugs</li>
-							<li>Hosting included</li>
-							<li>Freemium version</li>
-							<li>Online support</li>
-							<li>Video tutorials</li>
-							<li>View backlogs</li>
-							<li>Eclipse plugin</li>
-							<li>Git client support</li>
-							<li>Scalable packages</li>
-							<li>Upgrade/downgrade pricing</li>
+							<li>Intellisense</li>
+							<li>Code organistaion</li>
+							<li>Searching Capabilities</li>
+							<li>Refactoring</li>
+							<li>Plugins</li>
+							<li>Building</li>
+							<li>Project specific facets</li>
+							<li>Navigation is made easier</li>
+							<li>Auto completion</li>
+							<li>Error debugging</li>
+							<li>Organizing your imports</li>
+							<li>Downloading requires packages at ease</li>
 						</ul>
 					</div>
 					<div class="customCol" style="width:50%;float:right">
 					<h3>Weaknesses</h3>
 						<ul>
-							<li>Project collaboration</li>
-							<li>Task management</li>
-							<li>Create permissions></li>
-							<li>Manage users</li>
-							<li>Customize dashboard</li>
-							<li>Create reports</li>
-							<li>Export to Excel</li>
-							<li>Java, Ruby, Python etc.</li>
-							<li>Obtain software insights</li>
-							<li>Identifies bugs</li>
-							<li>Hosting included</li>
-							<li>Freemium version</li>
-							<li>Online support</li>
-							<li>Video tutorials</li>
-							<li>View backlogs</li>
-							<li>Eclipse plugin</li>
-							<li>Git client support</li>
-							<li>Scalable packages</li>
-							<li>Upgrade/downgrade pricing</li>
+							<li>No find/replace for whole project or folders, only current file</li>
+							<li>No highlighting alternate operators (endif, endforeach, etc)</li>
+							<li>No option to create SQL files</li>
+							<li>Bad documentation (Website out of date, lot of 404s)</li>
+							<li>A lot of bugs</li>
 						</ul>
 					</div>
 
