Added more strengths & weaknesses
-Added more strengths & weaknesses

--- a/IDE Project/startbootstrap-clean-blog-gh-pages/comparison.html
+++ b/IDE Project/startbootstrap-clean-blog-gh-pages/comparison.html
@@ -159,8 +159,96 @@
 					</div>
 
                 </div>
-            </div>
-        </div>
+
+
+                </div>					
+			</div>
+			<div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="width:100%;margin-left:0%;">
+					<div class="customWrapper" style="width:50%;float:left;margin-right:5%;">
+						<h2 style="text-align:center;">Visual Studio</h2>
+						<div class="customCol" style="width:50%;float:left;">
+							<h3>Strengths</h3>
+							<ul>
+								<li>Project collaboration</li>
+								<li>Task management</li>
+								<li>Create permissions></li>
+								<li>Manage users</li>
+								<li>Customize dashboard</li>
+								<li>Create reports</li>
+								<li>Export to Excel</li>
+								<li>Java, Ruby, Python etc.</li>
+								<li>Obtain software insights</li>
+								<li>Identifies bugs</li>
+								<li>Hosting included</li>
+								<li>Freemium version</li>
+								<li>Online support</li>
+								<li>Video tutorials</li>
+								<li>View backlogs</li>
+								<li>Eclipse plugin</li>
+								<li>Git client support</li>
+								<li>Scalable packages</li>
+								<li>Upgrade/downgrade pricing</li>
+							</ul>
+						</div>
+						<div class="customCol" style="width:45%;float:right;">
+							<h3>Weaknesses</h3>
+							<ul>
+								<li>Occasionally crashes when updating project and solution files</li>
+								<li>Ipch directory is a pain</li>
+								<li>"Find and replace" dialog</li>
+								<li>Rising cost</li>
+								<li>Expiring intellectual property</li>
+							</ul>
+						</div>
+
+					</div>
+					<div class="customWrapper" style="width:45%;float:right;">
+						<h2 style="text-align:center;">IntelliJ IDEA</h2>
+						<div class="customCol" style="width:50%;float:left;">
+							<h3>Strengths</h3>
+							<ul>
+								<li>Build tools</li>
+								<li>Version control</li>
+								<li>Smart completion</li>
+								<li>Chain Completion</li>
+								<li>Static members completion</li>
+								<li>Data flow analysis</li>
+								<li>Language injection</li>
+								<li>Consistent refactorings</li>
+								<li>Detecting duplicates</li>
+								<li>Detecting code smells</li>
+								<li>Developer ergonomics</li>
+								<li>Quick search</li>
+								<li>Heuristics</li>
+								<li>Wizard-free environment</li>
+								<li>Ergonomic layout</li>
+								<li>Decompiler</li>
+								<li>Coverage</li>
+								<li>Database tools/SQL</li>
+								<li>Debugger</li>
+								<li>Version Control</li>
+								<li>Gradle</li>
+							</ul>
+						</div>
+						<div class="customCol" style="width:50%;float:right">
+							<h3>Weaknesses</h3>
+							<ul>
+								<li>Price</li>
+								<li>Not beginner friendly</li>
+								<li>Cluttered</li>
+								<li>Unintuitive</li>
+								<li>A lot of bugs</li>
+								<li>Learning curve</li>
+								<li>Loss of incremental compiler</li>
+							</ul>
+						</div>
+
+					</div>
+                </div>					
+			</div>
+        
+		</div>
     </article>
 
     <hr>
